# recipe-book-from-icloud

./: .env.example  .gitignore  README.md  pyproject.toml
pipeline/: cluster.py  config.py  embed.py  ingest_local.py  pass1_triage.py  pass2_deep_tag.py  recipes.py
pipeline/utils/: llm_clients.py  prompts.py
supabase/migrations/: 0001_init.sql
